# mars-rover

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_mars_rover.sh  tox.ini
mars_rover/: grid.py  input_parser.py  main.py  rover.py
tests/: example_input_made_up.txt  test_end_to_end.py  test_grid.py  test_input_parser.py  test_rover.py  test_rover_with_grid.py
